@@ -1,3 +1,5 @@
+* Add support for instance level configuration
+
 * Add support for provider key
 
 * Clean up implementation
